--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div id="quiz-container">
         <h1>Animal Kingdom Quiz</h1>
         <p id="scientific-name"></p>
-        <input type="text" id="user-input" placeholder="Press Enter after guessing...">
+        <input type="text" id="user-input" placeholder="Press Enter after guessing the common name...">
         <p id="result"></p>
     </div>
     <script src="quiz.js"></script>
