--- a/scientists/scientists_index.html
+++ b/scientists/scientists_index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scientist Description</title>
-  <link rel="stylesheet" href="scientists_styles.css">
+  <link rel="stylesheet" href="/animalkingdom.github.io/tree/add-scientists-page/scientists/scientists_styles.css">
 </head>
 <body>
   <div class="container">
@@ -14,6 +14,6 @@
     <p id="answer"></p>
     <button id="showAnswer">Show Answer</button>
   </div>
-  <script src="scientists_script.js"></script>
+  <script src="/animalkingdom.github.io/tree/add-scientists-page/scientists/scientists_script.js"></script>
 </body>
 </html>
