--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <input type="text" id="user-input" placeholder="Press Enter after guessing the common name...">
         <p id="result"></p>
     </div>
+
+    <!-- New section for "Other Services" -->
+    <div id="other-services">
+        <h2>Other Services</h2>
+        <ul>
+            <li><a href="/animalkingdom.github.io/tree/add-scientists-page/scientists/scientists_index.html">Scientists</a></li>
+            <!-- Add more links as needed -->
+        </ul>
+    </div>
+
     <script src="quiz.js"></script>
 </body>
 </html>
