--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2>Other Services</h2>
         <ul>
             <li><a href="/animalkingdom.github.io/scientists/scientists_index.html">Scientists and works</a></li>
-            <!-- Add more links as needed -->
+            <li><a href="/animalkingdom.github.io/year/year_index.html">Works and years</a></li>
         </ul>
     </div>
 
