--- a/year/year_index.html
+++ b/year/year_index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Important Dates and Events in Biology</title>
-    <link rel="stylesheet" href="/animalkingdom.github.io/scientists/year_styles.css">
+    <link rel="stylesheet" href="/animalkingdom.github.io/year/year_styles.css">
 </head>
 <body>
     <div id="quiz-container">
@@ -11,6 +11,6 @@
         <input type="text" id="user-input" placeholder="Enter the year...">
         <p id="result"></p>
     </div>
-    <script src="/animalkingdom.github.io/scientists/year_quiz.js"></script>
+    <script src="/animalkingdom.github.io/year/year_quiz.js"></script>
 </body>
 </html>
