Update and rename index.html to animalkingdom_index.html

--- a/animalkingdom_index.html
+++ b/animalkingdom_index.html
@@ -20,6 +20,12 @@
             <li><a href="/animalkingdom.github.io/year/year_index.html">Works and years</a></li>
         </ul>
     </div>
+    <div id="homepage-button-container">
+       <a href="index.html" id="homepage-button">Go to Homepage</a>
+    </div>
+	<div id="info-container">
+       <h3> This is just an information box.<br>This should be in a new line.</h3>
+    </div>
 
     <script src="quiz.js"></script>
 </body>
