--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>This is my attempt to help fellow NEET aspirants to learn and practice things efficiently.</p>
         <div class="services">
             <h2>Here are my currently available services</h2>
-            <a href="index.html">Animal Kingdom scientific and common names</a>
+            <a href="animalkingdom_index.html">Animal Kingdom scientific and common names</a>
             <a href="scientists\scientists_index.html">All scientists and their work</a>
             <a href="service3.html">All important years and events</a>
             <a href="service4.html">Service 4</a>
