--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Here are my currently available services</h2>
             <a href="animalkingdom_index.html">Animal Kingdom scientific and common names</a>
             <a href="scientists\scientists_index.html">All scientists and their work</a>
-            <a href="year\year_index.html">All important years and events</a>
+            <a href="/animalkingdom.github.io/year/year_index.html">All important years and events</a>
             <a href="service4.html">Service 4</a>
         </div>
     </div>
